# filelock-holmes

./: .gitignore  AGENTS.md  pyproject.toml
src/filelock_holmes/: __init__.py
src/filelock_holmes/app/: __init__.py  config.py  workspace.py
src/filelock_holmes/core/: __init__.py
src/filelock_holmes/core/pipeline/: __init__.py  contracts.py
